--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0; }
+
 .Nav-Drawer {
   top: 0;
   left: 0;
@@ -5,10 +9,32 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.25); }
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .Nav-Drawer-Modal {
-  width: 1280px;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 25%;
+  height: 100%;
   background-color: #FFFFFF; }
+
+.Nav-Drawer-Modal-Header {
+  top: 0;
+  left: 0;
+  height: 360px;
+  border: none;
+  border-bottom: 2px solid #BDBDBD; }
+  .Nav-Drawer-Modal-Header h1 {
+    padding-top: 130px;
+    padding-left: 50px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 40px; }
+  .Nav-Drawer-Modal-Header h2 {
+    font-size: 30px;
+    padding-left: 50px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300; }
 
 /*# sourceMappingURL=index.css.map */
