--- a/src/components/Nav-Drawer/css/scss/index.scss
+++ b/src/components/Nav-Drawer/css/scss/index.scss
@@ -1,5 +1,10 @@
 @import '../../../public.scss';
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .Nav-Drawer {
     top: 0;
     left: 0;
@@ -7,10 +12,35 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .Nav-Drawer-Modal {
-    width: 1280px;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 25%;
+    height: 100%;
     background-color: $text;
+}
+
+.Nav-Drawer-Modal-Header {
+    top: 0;
+    left: 0;
+    height: 360px;
+    border: none;
+    border-bottom: 2px solid $divider;
+    h1 {
+        padding-top: 130px;
+        padding-left: 50px;
+        font-family: $roboto;
+        font-weight: 300;
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 30px;
+        padding-left: 50px;
+        font-family: $roboto;
+        font-weight: 300;
+    }
 }
