--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -26,15 +26,39 @@
   border: none;
   border-bottom: 2px solid #BDBDBD; }
   .Nav-Drawer-Modal-Header h1 {
-    padding-top: 130px;
+    padding-top: 95px;
     padding-left: 50px;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-size: 40px; }
+    font-size: 2.5em;
+    color: #212121; }
   .Nav-Drawer-Modal-Header h2 {
-    font-size: 30px;
+    font-size: 1.875em;
     padding-left: 50px;
     font-family: "Roboto", sans-serif;
-    font-weight: 300; }
+    font-weight: 300;
+    color: #757575; }
+  .Nav-Drawer-Modal-Header button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer; }
+  .Nav-Drawer-Modal-Header i {
+    font-size: 2.5925925925925926em; }
+
+.Nav-Drawer-Modal-Content ul li {
+  display: flex;
+  align-items: center;
+  margin: 50px 0px;
+  cursor: pointer; }
+  .Nav-Drawer-Modal-Content ul li * {
+    display: inline;
+    font-size: 50px;
+    color: #212121; }
+  .Nav-Drawer-Modal-Content ul li p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+    padding-left: 10px;
+    color: #757575; }
 
 /*# sourceMappingURL=index.css.map */
