--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -41,7 +41,8 @@
   .Nav-Drawer-Modal-Header button {
     background-color: transparent;
     border: none;
-    cursor: pointer; }
+    cursor: pointer;
+    z-index: 5; }
   .Nav-Drawer-Modal-Header i {
     font-size: 2.5925925925925926em; }
 
