--- a/src/components/Nav-Drawer/css/scss/index.scss
+++ b/src/components/Nav-Drawer/css/scss/index.scss
@@ -30,6 +30,7 @@
     height: 360px;
     border: none;
     border-bottom: 2px solid $divider;
+    
     h1 {
         padding-top: 95px;
         padding-left: 50px;
@@ -49,6 +50,7 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+        z-index: 5;
     }
     i {
         font-size: 2.5925925925925926em;
