--- a/src/components/Navbar/css/css/index.css
+++ b/src/components/Navbar/css/css/index.css
@@ -7,13 +7,11 @@ body {
   background-color: #2196F3;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
   .Navbar button {
-    border: 2px solid #FF5252;
+    border: none;
     cursor: pointer;
-    border: 2px solid #FF5252;
     width: 55px;
     height: 55px;
-    background-color: transparent;
-    color: #FFFFFF; }
+    background-color: transparent; }
     .Navbar button i {
       width: auto;
       font-size: 30px; }
