--- a/src/components/Navbar/css/scss/index.scss
+++ b/src/components/Navbar/css/scss/index.scss
@@ -10,14 +10,12 @@ body {
     background-color: $primary;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     button {
-        border: 2px solid $accent;
+        border: none;
         cursor: pointer;
-        border: 2px solid $accent;
         width: 55px;
         height: 55px;
         background-color: transparent;
-        // border: none;
-        color: $text;
+        // color: $text;
         i {
             width: auto;
             font-size: 30px;
