Worked on styles for Nav-Drawer & Navbar, worked on formating a date with moment.js

--- a/src/components/Navbar/css/css/index.css
+++ b/src/components/Navbar/css/css/index.css
@@ -12,8 +12,12 @@ body {
     width: 55px;
     height: 55px;
     background-color: transparent; }
-    .Navbar button i {
+    .Navbar button .Open-Nav-Drawer {
       width: auto;
-      font-size: 30px; }
+      font-size: 30px;
+      color: #FFFFFF; }
+
+#Menu-Icon {
+  color: #FFFFFF; }
 
 /*# sourceMappingURL=index.css.map */
