--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -49,7 +49,8 @@
 .Nav-Drawer-Modal-Content ul li {
   display: flex;
   align-items: center;
-  margin: 50px 0px;
+  margin-top: 50px;
+  margin-left: 50px;
   cursor: pointer; }
   .Nav-Drawer-Modal-Content ul li * {
     display: inline;
