--- a/src/components/Nav-Drawer/css/scss/index.scss
+++ b/src/components/Nav-Drawer/css/scss/index.scss
@@ -62,9 +62,8 @@
         li {
             display: flex;
             align-items: center;
-            // border: 2px solid $accent;
-            // height: 20px;
-            margin: 50px 0px;
+            margin-top: 50px;
+            margin-left: 50px;
             cursor: pointer;
             * {
                 display: inline;
