--- a/src/components/Card/css/css/index.css
+++ b/src/components/Card/css/css/index.css
@@ -2,7 +2,16 @@
   width: 500px;
   height: 500px;
   margin: auto;
-  border: 2px solid #FF5252;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+  .Card ul li {
+    list-style-type: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    color: #757575;
+    margin-left: 20px;
+    font-size: 25px; }
+  .Card ul li::before {
+    font-size: 25px;
+    margin-right: 10px; }
 
 /*# sourceMappingURL=index.css.map */
