--- a/src/components/Card/css/scss/index.scss
+++ b/src/components/Card/css/scss/index.scss
@@ -4,6 +4,19 @@
     width: 500px;
     height: 500px;
     margin: auto;
-    border: 2px solid $accent;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    ul {
+        li {
+            list-style-type: none;
+            font-family: $roboto;
+            font-weight: 300;
+            color: $secondary-text;
+            margin-left: 20px;
+            font-size: 25px;
+        } li::before {
+            // content: '&bull';
+            font-size: 25px;
+            margin-right: 10px;
+        }
+    }
 }
