--- a/src/components/Card/css/css/index.css
+++ b/src/components/Card/css/css/index.css
@@ -1,5 +1,5 @@
 .Card {
-  width: 500px;
+  width: 30%;
   height: 500px;
   margin: auto;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
