--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0; }
 
-@keyframes fadeIn{
+@keyframes slideIn{
   0%{
-    opacity: 0;
+    left: -25%;
   }
   100%{
-    opacity: 1;
+    left: 0;
   }
 }
 
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  animation: fadeIn 0.3s ease;
+  animation: slideIn 0.3s ease;
   background-color: rgba(0, 0, 0, 0.5); }
 
 .Nav-Drawer-Modal {
@@ -28,7 +28,7 @@
   z-index: 2;
   width: 25%;
   height: 100%;
-  animation: fadeIn 0.3s ease;
+  animation: slideIn 0.3s ease;
   background-color: #FFFFFF; }
 
 .Nav-Drawer-Modal-Header {
