--- a/src/components/Card/css/css/index.css
+++ b/src/components/Card/css/css/index.css
@@ -3,6 +3,11 @@
   height: 500px;
   margin: auto;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+  .Card h1 {
+    font-family: "Roboto", sans-serif;
+    color: #383838;
+    margin-top: 10px;
+  }
   .Card ul li {
     list-style-type: none;
     font-family: "Roboto", sans-serif;
