--- a/src/components/Nav-Drawer/css/css/index.css
+++ b/src/components/Nav-Drawer/css/css/index.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   z-index: 1;
-  width: 100%;
+  width: 200%;
   height: 100%;
   position: fixed;
   animation: slideIn 0.3s ease;
@@ -26,9 +26,9 @@
   top: 0;
   left: 0;
   z-index: 2;
-  width: 25%;
+  width: 15%;
   height: 100%;
-  animation: slideIn 0.3s ease;
+  /* animation: slideIn 0.3s ease; */
   background-color: #FFFFFF; }
 
 .Nav-Drawer-Modal-Header {
