--- a/src/components/Card/css/scss/index.scss
+++ b/src/components/Card/css/scss/index.scss
@@ -14,8 +14,8 @@
             margin-left: 20px;
             font-size: 25px;
         } li::before {
-            // content: '&bull';
-            font-size: 25px;
+            content: "\2022";
+            font-size: 50px;
             margin-right: 10px;
         }
     }
