--- a/src/components/Card/css/css/index.css
+++ b/src/components/Card/css/css/index.css
@@ -2,22 +2,46 @@
   width: 500px;
   height: 500px;
   margin: auto;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
-  .Card h1 {
-    font-family: "Roboto", sans-serif;
-    color: #383838;
-    margin-top: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-top: 50px;
+  /*ul {
+      li {
+          list-style-type: none;
+          font-family: $roboto;
+          font-weight: 300;
+          color: $secondary-text;
+          margin-left: 25px;
+          font-size: 25px;
+      } li::before {
+          content: "\2022";
+          font-size: 50px;
+          margin-right: 10px;
+      }
   }
-  .Card ul li {
-    list-style-type: none;
+  h1 {
+      font-family: $roboto;
+      font-weight: 300;
+      padding-top: 25px;
+      padding-left: 25px;
+      font-size: 40px;
+  }*/ }
+  .Card h1 {
+    color: #212121;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
+    font-size: 60px;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-bottom: 20px; }
+  .Card li {
     color: #757575;
-    margin-left: 20px;
-    font-size: 25px; }
-  .Card ul li::before {
-    content: "\2022";
-    font-size: 50px;
-    margin-right: 10px; }
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    padding: 5px;
+    list-style-type: none; }
+  .Card li:before {
+    padding: 0px 5px;
+    content: "\2022"; }
 
 /*# sourceMappingURL=index.css.map */
