--- a/src/components/Nav-Drawer/css/scss/index.scss
+++ b/src/components/Nav-Drawer/css/scss/index.scss
@@ -1,5 +1,22 @@
 @import '../../../public.scss';
 
+@mixin linearGradient($direction, $start-colour, $end-color) {
+    background: -webkit-linear-gradient($direction, $start-colour, $end-color);
+    background:    -moz-linear-gradient($direction, $start-colour, $end-color);
+    background:      -o-linear-gradient($direction, $start-colour, $end-color);
+    background:         linear-gradient($direction, $start-colour, $end-color);
+    background: $start-colour; //Fallback for old browsers 
+}
+
+@keyframes slideIn{
+    0%{
+        left: -25%;
+    }
+    100%{
+        left: 0;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,73 +26,79 @@
     top: 0;
     left: 0;
     z-index: 1;
-    width: 100%;
+    width: 150%;
     height: 100%;
+    animation: slideIn 0.3s ease;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.Nav-Drawer-Modal {
+.Nav-Drawer-Background {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.Nav-Drawer-Modal{
     top: 0;
     left: 0;
-    z-index: 2;
-    width: 25%;
+    z-index: 1;
+    width: 20%;
     height: 100%;
     background-color: $text;
-}
-
-.Nav-Drawer-Modal-Header {
-    top: 0;
-    left: 0;
-    height: 360px;
-    border: none;
-    border-bottom: 2px solid $divider;
-    
-    h1 {
-        padding-top: 95px;
-        padding-left: 50px;
-        font-family: $roboto;
-        font-weight: 300;
-        font-size: 2.5em;
-        color: $primary-text;
-    }
-    h2 {
-        font-size: 1.875em;
-        padding-left: 50px;
-        font-family: $roboto;
-        font-weight: 300;
-        color: $secondary-text;
-    }
-    button {
-        background-color: transparent;
+    .Nav-Drawer-Modal-Header {
+        top: 0;
+        left: 0;
+        height: 360px;
         border: none;
-        cursor: pointer;
-        z-index: 5;
-    }
-    i {
-        font-size: 2.5925925925925926em;
-    }
-}
-
-.Nav-Drawer-Modal-Content {
-    ul {
-        li {
-            display: flex;
-            align-items: center;
-            margin-top: 50px;
-            margin-left: 50px;
+        background: linear-gradient(45deg, $primary,$dark-primary );
+        h1 {
+            padding-top: 95px;
+            padding-left: 50px;
+            font-family: $roboto;
+            font-weight: 300;
+            font-size: 2.5em;
+            color: $text;
+        }
+        h2 {
+            font-size: 1.875em;
+            padding-left: 50px;
+            font-family: $roboto;
+            font-weight: 300;
+            color: $text;
+        }
+        button {
+            background-color: transparent;
+            border: none;
             cursor: pointer;
-            * {
-                display: inline;
-                font-size: 50px;
-                color: $primary-text;
-            } p {
-                font-family: $roboto;
-                font-weight: 300;
-                font-size: 30px;
-                padding-left: 10px;
-                color: $secondary-text;
+            z-index: 5;
+        }
+        i {
+            font-size: 2.5925925925925926em;
+        }
+    }
+    
+    .Nav-Drawer-Modal-Content {
+        ul {
+            li {
+                display: flex;
+                align-items: center;
+                margin-top: 25px;
+                margin-left: 25px;
+                cursor: pointer;
+                * {
+                    display: inline;
+                    font-size: 50px;
+                    color: $primary-text;
+                } p {
+                    font-family: $roboto;
+                    font-weight: 300;
+                    font-size: 30px;
+                    padding-left: 10px;
+                    color: $secondary-text;
+                }
             }
         }
     }
 }
+
