--- a/src/components/Add-Task-Button/css/scss/index.scss
+++ b/src/components/Add-Task-Button/css/scss/index.scss
@@ -1,14 +1,19 @@
 @import '../../../public.scss';
 
 .Add-Task-Button {
+    position: relative;
     width: 50px;
     height: 50px;    
     border-radius: 50%;
     background-color: $accent;
     i {
-        display:flex;
-        justify-content:center;
-        align-items:center;
+        color: $text;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -12px;
+        margin-left: -12px;
+        user-select: none;
     }
 }
 
