--- a/src/components/Add-Task-Button/css/css/index.css
+++ b/src/components/Add-Task-Button/css/css/index.css
@@ -1,4 +1,7 @@
 .Add-Task-Button {
+  cursor: pointer;
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  border: none;
   position: relative;
   width: 50px;
   height: 50px;
